# SIMDString-with-PoolAlloc

./: AllocatorPlatform.h  LICENSE  PoolAllocator.cpp  PoolAllocator.h  README.md  SIMDString.h  SimdStringWithPoolAlloc.h
allocatorExampleUsage/: CMakeLists.txt  SimdStringTest.cpp  SimdStringTest.sln  SimdStringTest.vcxproj  SimdStringTest.vcxproj.filters
simdString/: README.md  SIMDString.h
src/: AllocatorPlatform.h  DebugHelpers.h  PoolAllocator.cpp  PoolAllocator.h  g3d_buffer_pool_resource.h
